Added source for LICENSE file

--- a/jcliff/jcliff.nuspec
+++ b/jcliff/jcliff.nuspec
@@ -8,7 +8,7 @@
     <title>jcliff</title>
     <authors>Burak Serdar</authors>
     <projectUrl>https://github.com/bserdar/jcliff</projectUrl>
-    <licenseUrl>https://www.gnu.org/copyleft/gpl.html</licenseUrl>
+    <licenseUrl>https://github.com/bserdar/jcliff/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectSourceUrl>https://github.com/bserdar/jcliff</projectSourceUrl>
     <bugTrackerUrl>https://github.com/bserdar/jcliff/issues</bugTrackerUrl>
